Project downgraded to java 11